Fixing the spacing of the contact button

--- a/main.css
+++ b/main.css
@@ -86,7 +86,7 @@ section .row img {
 }
 
 .contact-btn a {
-  margin-right: 36px;
+  margin-right: 30px;
   padding: 8px 18px;
   border: 1px solid #000000;
 }
